# taia-claude-code-example

./: .gitignore  CLAUDE.md  README.md  udn-com-news-story-124061-9435282.md
.claude/skills/security-review/: checklist.md
.claude/skills/twstock/: SKILL.md  SKILL.md-使用curl  SKILL.md-英文內容
.claude/skills/usstock/: SKILL.md
day1/: README.md
day1/lab1/: README.md
day1/lab2/: README.md
day1/lab3/: README.md  model-thinking.skill
day1/lab3/model-thinking/: README.md
day2/: 2026-04-23-140924-mcpreddit.txt  2026-04-23-164825-excelhtml.txt  README.md  SKILL.md  steps.md
day2/extra/: README.md
day2/lab1/: README.md  userguide.md
day2/lab1-2/: README.md
day2/lab1/design-system/: index.html
day2/lab2/: .gitignore  README.md  SETUP.md  dashboard.html  userguide.md
day2/lab2/app/: main.py  vector_store.py
day2/lab3/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
day2/lab4/: CLAUDE.md  README.md  nantou.html  tainan-weather.html  userguide.md  wanli.html
day2/lab4/.claude/: settings.json
day2/lab5/: README.md  flaw_sql.py  report.md
day2/lab5/security_report/: sec_review_lab4_2026-04-24_17-28-39.md
day2/lab6/: .mcp.json  README.md
day2/lab6/reddit-mcp/: pyproject.toml
day2/lab6/reddit-mcp/src/reddit_mcp/: server.py
day2/lab7/: CLAUDE.md  README.md
day2/lab7/wiki/: index.md  log.md
day2/產生結果範例/lab1-1/: index.html
day2/產生結果範例/lab1-2/: CLAUDE.md  (+3 more)
day2/產生結果範例/lab5/reddit-mcp/: README.md  pyproject.toml
day2/產生結果範例/lab5/reddit-mcp/src/reddit_mcp/: server.py
example-project-structure/: .worktreeinclude  project-structure.md
(+65 files in other folders)
