[project]
name = "reddit-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jamescchuang", email = "10432272+jamescchuang@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
]

[project.scripts]
reddit-mcp = "reddit_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
