[project]
name = "reddit-mcp"
version = "0.1.0"
description = "Zero-auth Reddit MCP server (reads posts, comments, users, subreddits)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
reddit-mcp = "reddit_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reddit_mcp"]
